[package]
name = "nix-ld"
version = "2.0.4"
edition = "2021"

[[bin]]
name = "nix-ld"
test = false

[[test]]
name = "tests"

[dependencies]
cfg-match = "0.2.1"
constcat = "0.6.0"
default-env = "0.1.1"
embedded-io = "0.6.1"
goblin = { version = "0.9.3", default-features = false, features = ["elf32", "elf64"] }
heapless = "0.8.0"
linux-raw-sys = { version = "0.9.3", default-features = false, features = ["no_std", "general", "errno"] }
log = "0.4.26"

[build-dependencies]
cc = "1.2.17"

[dev-dependencies]
cc = "1.2.17"
lazy_static = "1.5.0"
rstest = { version = "0.25.0", default-features = false }
tempfile = "3.19.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
debug = true

[features]
default = ["entry_trampoline"]

# Use a trampoline to revert our changes to LD_LIBRARY_PATH before executing the real program
entry_trampoline = []
