[package]
name = "nix-ld"
version = "2.0.4"
edition = "2024"

[[bin]]
name = "nix-ld"
test = false

[[test]]
name = "tests"

[dependencies]
embedded-io = "0.6.1"
goblin = { version = "0.10.0", default-features = false, features = [
    "elf32",
    "elf64",
] }
heapless = "0.8.0"
linux-raw-sys = { version = "0.9.4", default-features = false, features = [
    "no_std",
    "general",
    "errno",
] }
log = "0.4.27"

[build-dependencies]
cc = "1.2.27"

[dev-dependencies]
cc = "1.2.27"
rstest = { version = "0.25.0", default-features = false }
tempfile = "3.20.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
debug = true

[features]
default = ["entry_trampoline"]

# Use a trampoline to revert our changes to LD_LIBRARY_PATH before executing the real program
entry_trampoline = []
